<resources>
    <string name="app_name" translatable="false">ARC AXIUM UX</string>
    <string name="locale">en-US</string>
    <string name="notification_message">Click to open UX.</string>
    <string name="aborted">Aborted</string>
    <string name="accept">Accept</string>
    <string name="accept_changes_enter_or_cancel">Accept changes?\nENTER or CANCEL</string>
    <string name="accessibility_form_cancel">Cancel</string>
    <string name="accessibility_form_clear">Clear</string>
    <string name="accessibility_pin_cancel">Cancel</string>
    <string name="accessibility_pin_clear">Clear</string>
    <string name="accessibility_pin_digit">Digit</string>
    <string name="accessibility_pin_enter">Enter</string>
    <string name="amount_cashback_total_amount_ok" formatted="false">&lt;?ivARC_AMOUNT?&gt; + &lt;?ivARC_CASHBACK?&gt; = &lt;?ivARC_TOTAL?&gt;\nAmount OK?</string>
    <string name="amount_must_be_less_than_amount" formatted="false">Amount must be less than &lt;?ivARC_AMOUNT?&gt;</string>
    <string name="amount_ok">Amount OK?</string>
    <string name="amount_ok_total" formatted="false">Amount OK? &lt;?ivARC_TOTAL?&gt;</string>
    <string name="application_blocked">Application blocked</string>
    <string name="application_not_supported">Application not supported</string>
    <string name="application_not_supported_please_reselect">Application not supported\nPlease re-select</string>
    <string name="approved">Approved</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="authorization_confirmation_failed">Authorization confirmation failed</string>
    <string name="authorization_response_timeout">Authorization response timeout</string>
    <string name="authorization_send_failed">Authorization send failed</string>
    <string name="authorizing_please_wait">Authorizing…\nPlease wait</string>
    <string name="authorizing_please_wait_do_not_remove_card">Authorizing\nPlease wait\nDo not remove card</string>
    <string name="benefits_restored">Benefits Restored</string>
    <string name="bt_pairing_canceled">BT pairing canceled</string>
    <string name="bt_pairing_failed">BT pairing failed</string>
    <string name="bt_pairing_mode">BT Pairing Mode?</string>
    <string name="bt_pairing_required">BT Pairing Required</string>
    <string name="bt_pairing_succeeded">BT pairing succeeded</string>
    <string name="bt_pin_type">BT PIN Type?</string>
    <string name="btn_no_thanks">No Thanks</string>
    <string name="canceled_by_customer">Canceled by customer</string>
    <string name="cannot_process_transaction_too_many_taps">Cannot process transaction - Too many taps</string>
    <string name="card">Card</string>
    <string name="card_accepted">Card accepted</string>
    <string name="card_blocked">Card blocked</string>
    <string name="card_blocked_remove_card">Card blocked\nRemove card</string>
    <string name="card_data_invalid">Card data invalid</string>
    <string name="card_error_return_to_clinic">Card Error\nReturn to Clinic</string>
    <string name="card_not_accepted">Card not accepted</string>
    <string name="card_not_read_please_ask_for_assistance">Card not read\nplease ask for assistance</string>
    <string name="card_not_supported">Card not supported</string>
    <string name="card_problem">Card problem</string>
    <string name="card_problem_remove_card">Card problem\nRemove card</string>
    <string name="card_problem_see_journal_message">Card problem\nSee journal message</string>
    <string name="card_problem_transaction_canceled">Card problem\nTransaction canceled</string>
    <string name="card_read_canceled">Card read canceled</string>
    <string name="card_read_error">Card read error</string>
    <string name="card_read_error_please_try_again">Card read error\nplease try again</string>
    <string name="card_read_error_try_again">Card read error. Try again.</string>
    <string name="card_removed">Card removed</string>
    <string name="card_removed_transaction_canceled">Card removed\nTransaction canceled</string>
    <string name="cash_back">Cash back</string>
    <string name="cashback">Cashback?</string>
    <string name="cashback_correct_cashback">Cashback correct? &lt;?ivARC_CASHBACK?&gt;</string>
    <string name="cashback_limit_is_cb_max_text">Cashback limit is &lt;?ivARC_CB_MAX_TEXT?&gt;</string>
    <string name="config_eft_levels">Config EFT Levels</string>
    <string name="config_host_port">Config Host Port</string>
    <string name="config_test_debug">Config Test/Debug</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_application">Confirm app: &lt;?ivEMVAPPNAME?&gt;</string>
    <string name="confirmed_thank_you">Confirmed. Thank you</string>
    <string name="could_not_initiate_bt_pairing">Could not initiate BT pairing</string>
    <string name="cpem_test_card_read">CPEM test card read</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="debit_is_available_proceed_with_debit">Debit is available. Proceed with Debit?</string>
    <string name="debit_is_available_would_you_like_to_proceed_with_debit">Debit is available. Would you like to proceed with debit?</string>
    <string name="decline">Decline</string>
    <string name="declined">Declined</string>
    <string name="device_name">Device name\n</string>
    <string name="do_not_remove_card">Do not remove card</string>
    <string name="dxbase_ethernet_settings_succeeded">DX8000 Base ethernet configuration succeeded</string>
    <string name="dxbase_ethernet_settings_failed">DX8000 Base ethernet configuration failed</string>
    <string name="ebt_cash">EBT Cash</string>
    <string name="ebt_foodstamps">EBT Foodstamps</string>
    <string name="emv">EMV</string>
    <string name="emvappname_please_wait">&lt;?ivEMVAPPNAME?&gt;\nPlease wait…</string>
    <string name="encrypting_please_wait">Encrypting… please wait…</string>
    <string name="english_125">English 125</string>
    <string name="enter_card">Enter card</string>
    <string name="enter_card_details">Enter card details</string>
    <string name="entry_timeout_transaction_canceled">Entry timeout\nTransaction canceled</string>
    <string name="exit">Exit</string>
    <string name="expired_card_please_use_another">Expired card. Please use another.</string>
    <string name="fallback_please_remove_card">Fallback. Please remove card</string>
    <string name="if_this_is_a_check_card_select_yes">If this is a Check card, select Yes.</string>
    <string name="if_this_is_atm_debit_card_select_yes">If this is ATM/Debit card, select Yes.</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="index_key_is_missing">Index key is missing</string>
    <string name="input_accepted">Input accepted</string>
    <string name="input_canceled">Input canceled</string>
    <string name="insert">Insert</string>
    <string name="insert_card_in_chip_reader">Insert card in chip reader</string>
    <string name="insert_card_swipe_or_select_a_language">Insert card, swipe\nor select a language</string>
    <string name="insert_swipe_or_tap_card">Insert, Swipe or Tap Card</string>
    <string name="invalid_account_number">Invalid Account Number</string>
    <string name="invalid_amount_cashback">Invalid amount: &lt;?ivARC_CASHBACK?&gt;</string>
    <string name="invalid_bt_mac">Invalid BT MAC</string>
    <string name="invalid_bt_mac_pin">Invalid BT MAC/PIN</string>
    <string name="invalid_card_for_payment_type">Invalid card for payment type</string>
    <string name="invalid_card_type_ask_for_assistance">Invalid card type…\nask for assistance</string>
    <string name="invalid_damaged_card">Invalid/Damaged card</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="invalid_no_bt_pin">Invalid/No BT PIN</string>
    <string name="invalid_payment_type">Invalid payment type</string>
    <string name="invalid_pin_please_reenter">Invalid PIN. Please re-enter</string>
    <string name="is_this_amount_ok_total">Is this amount OK? &lt;?ivARC_TOTAL?&gt;</string>
    <string name="just_received_an_unknown_message">Just received an unknown message</string>
    <string name="loading">Loading…</string>
    <string name="manufacture_device_id">Manufacture / Device Id</string>
    <string name="more">- More -</string>
    <string name="name_bluetoothdevice_pin_bluetoothpin">Not supported by ARC</string>
    <string name="next">Next</string>
    <string name="no_amount_entered_transaction_canceled">No amount entered\nTransaction canceled</string>
    <string name="not_a_sale_cashback_canceled">Not a sale. Cashback canceled.</string>
    <string name="not_accepted">Not accepted</string>
    <string name="not_approved_application_expired">Not approved\nApplication expired</string>
    <string name="number_to_match">Number to match\n</string>
    <string name="or">or</string>
    <string name="pair_to_replace_unpair_to_remove">PAIR to replace\nUNPAIR to remove</string>
    <string name="paypal">PayPal</string>
    <string name="pin_must_be_4_to_12_digits">PIN must be 4 to 12 digits</string>
    <string name="pin_ok">PIN OK</string>
    <string name="pin_try_limit_exceeded">PIN try limit exceeded</string>
    <string name="please_ask_for_assistance">Please ask for assistance</string>
    <string name="please_confirm">Please confirm</string>
    <string name="please_hand_card_to_cashier">Please hand card to cashier</string>
    <string name="please_insert_card">Please insert card</string>
    <string name="please_insert_your_smart_card_or_select_a_language">Please insert your smart card or select a language</string>
    <string name="please_present_one_card_only">Please Present One Card Only</string>
    <string name="please_re_select">Please re-select</string>
    <string name="please_retap_card">Please Retap Card</string>
    <string name="please_remove_card">Please remove card</string>
    <string name="please_scan_barcode">Please scan barcode</string>
    <string name="please_select_benefit_type">Please select benefit type</string>
    <string name="please_select_language">Please select language</string>
    <string name="please_select_payment_type">Please select payment type</string>
    <string name="please_select_shopping_payment_type">Please select shopping payment type</string>
    <string name="please_show_card_to_cashier">Please show card to cashier</string>
    <string name="please_sign_above_for_signature_verification">Please sign above for signature verification.</string>
    <string name="please_sign_and_press_ok">Please sign and press OK</string>
    <string name="please_sign_for_signature_registration">Please sign for signature registration.</string>
    <string name="please_slide_card">Please slide card</string>
    <string name="please_slide_card_or_choose_paypal">Please slide card or choose PayPal</string>
    <string name="please_slide_card_or_tap">Please slide card or Tap</string>
    <string name="please_slide_card_tap_or_choose_paypal">Please slide card, tap or choose PayPal</string>
    <string name="please_swipe_or_insert_card">Please swipe or insert card</string>
    <string name="please_tap_the_device_or_press_enter">Please Tap\nThe Device\nOr Press Enter</string>
    <string name="select_account">Select account</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_checking">Checking</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_savings">Savings</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>
    <string name="title_info">Info</string>
    <string name="title_menu">Select from list</string>
    <string name="terms_title">Terms and conditions</string>
</resources>