<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background"
    android:theme="@style/Theme.UxResourcesAccessibility">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_guide_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_guide_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_guide_right" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/margin_guide_bottom" />

    <TextView
        android:id="@+id/title"
        style="@style/ArcTitleAccessibility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_cless_bar"
        android:text="@string/select_account"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_display_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <LinearLayout
        android:id="@+id/layout_for_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft">

        <com.ingenico.retail.ui.x.server.forms.view.ButtonMenuLayout
            android:id="@+id/list_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/btn_selected_color"
                    style="@style/ArcBtnGenericAccessibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_checking"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/button_radius_value"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btn_checking"
                    style="@style/ArcBtnGenericAccessibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_checking"
                    app:cornerRadius="@dimen/button_radius_value"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btn_savings"
                    style="@style/ArcBtnGenericAccessibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_savings"
                    app:cornerRadius="@dimen/button_radius_value"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </com.ingenico.retail.ui.x.server.forms.view.ButtonMenuLayout>

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ArcBtnGenericAccessibility"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_cancel"
            app:cornerRadius="@dimen/button_radius_value" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_red_key"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>