<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background"
    android:theme="@style/Theme.UxResourcesAccessibility">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_guide_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_guide_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_guide_right" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/margin_guide_bottom" />

    <TextView
        android:id="@+id/title"
        style="@style/ArcTitleAccessibility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_menu"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        tools:ignore="TextContrastCheck" />

    <ListView
        android:id="@+id/list_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/list_box_margin_top"
        android:layout_marginBottom="@dimen/list_box_margin_bottom"
        android:divider="@color/black"
        android:dividerHeight="@dimen/list_box_divider_height"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:listSelector="@drawable/menu_selector"
        app:layout_constraintBottom_toTopOf="@+id/layout_for_buttons"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_for_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/list_box">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ArcBtnCancelAccessibility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            app:cornerRadius="@dimen/button_radius_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_clear"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.31"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_clear"
            style="@style/ArcBtnNoAccessibility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_no"
            app:cornerRadius="@dimen/button_radius_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_enter"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.92"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.31"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_enter"
            style="@style/ArcBtnYesAccessibility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_yes"
            app:cornerRadius="@dimen/button_radius_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.92"
            app:layout_constraintStart_toEndOf="@+id/btn_clear"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.31"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_green_key"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_yellow_key"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_red_key"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>