<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/Theme.UxResourcesAccessibility">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_guide_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_guide_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_guide_right" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/margin_guide_bottom" />

    <TextView
        android:id="@+id/title"
        style="@style/ArcTitleAccessibility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/terms_title"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        tools:ignore="TextContrastCheck" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/tc_scroll_view_margin"
        android:layout_marginBottom="@dimen/tc_scroll_view_margin"
        android:background="@drawable/background_edit_text"
        android:fadeScrollbars="false"
        android:orientation="vertical"
        android:padding="@dimen/tc_scroll_view_padding"
        app:layout_constraintBottom_toTopOf="@+id/layout_for_buttons"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.ingenico.retail.ui.x.server.forms.view.TermsAndConditionsView
            android:id="@+id/tc_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/robotomono_bold"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/tc_text_size" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_for_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/scroll_view">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ArcBtnCancelAccessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_decline"
            app:cornerRadius="@dimen/button_radius_value"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_enter"
            style="@style/ArcBtnYesAccessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_accept"
            app:cornerRadius="@dimen/button_radius_value"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_green_key"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_red_key"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>